--- a/HTML/index.html
+++ b/HTML/index.html
@@ -10,7 +10,7 @@
       <br />
       <nav>
         &emsp;&emsp;<a href="#"
-          ><img src="logo.png" alt="techcareer.net logo" /></a
+          ><img src="images/logo.png" alt="techcareer.net logo" /></a
         >&ensp;&ensp;
         <input
           type="search"
@@ -32,7 +32,7 @@
         <center>
           <a href="#"
             ><img
-              src="thyimage.png"
+              src="images/thyimage.png"
               alt="thyimage"
               width="1136"
               height="412" /></a
@@ -42,7 +42,9 @@
       </div>
       <div>
         <br />
-        <center><img src="sirketlogoları.png" alt="sirketlogoları" /></center>
+        <center>
+          <img src="images/sirketlogoları.png" alt="sirketlogoları" />
+        </center>
       </div>
       <div>
         <center>
@@ -52,7 +54,7 @@
               <th>
                 <a href="#" style="text-decoration: none"
                   ><img
-                    src="thyimage.png"
+                    src="images/thyimage.png"
                     alt="thyimage"
                     width="336"
                     height="180"
@@ -71,7 +73,7 @@
               <th>
                 <a href="#" style="text-decoration: none">
                   <img
-                    src="IstanbulKalkınmaAjansı.png"
+                    src="images/IstanbulKalkınmaAjansı.png"
                     alt="IstanbulKalkınmaAjansı"
                     width="336"
                     height="180"
@@ -90,7 +92,7 @@
               <th>
                 <a href="#" style="text-decoration: none"
                   ><img
-                    src="reactnativeworkshop.png"
+                    src="images/reactnativeworkshop.png"
                     alt="reactnativeworkshop"
                     width="336"
                     height="180"
@@ -119,7 +121,7 @@
           <table cellpadding="30">
             <tr>
               <td>
-                <img src="icon1.png" alt="icon1" />
+                <img src="images/icon1.png" alt="icon1" />
                 <h3>Ücretsiz etkinlikere katıl</h3>
                 <p>
                   Yolun başındasın ama en güzel aşamasındasın! Sektörün için
@@ -128,7 +130,7 @@
                 </p>
               </td>
               <td>
-                <img src="icon2.png" alt="icon2" />
+                <img src="images/icon2.png" alt="icon2" />
                 <h3>Kendini Kanıtla</h3>
                 <p>
                   Bootcamp, Hackathon ve Hiring Challenge etkinliklerine
@@ -137,7 +139,7 @@
                 </p>
               </td>
               <td>
-                <img src="icon3.png" alt="icon3" />
+                <img src="images/icon3.png" alt="icon3" />
                 <h3>İş fırsatı yakala</h3>
                 <p>
                   Sektöründe lider teknoloji şirketleriyle tanışacak ve iş
@@ -204,7 +206,7 @@
           <table cellpadding="40">
             <tr>
               <td>
-                <img src="icon4.png" alt="icon4" />
+                <img src="images/icon4.png" alt="icon4" />
                 <h2>Bootcamp</h2>
                 <p>
                   Bootcamp etkinlikleri, yazılım teknolojileri, veri bilimi,
@@ -217,7 +219,7 @@
                 >
               </td>
               <td>
-                <img src="icon5.png" alt="icon5" />
+                <img src="images/icon5.png" alt="icon5" />
                 <h2>Hackathon</h2>
                 <p>
                   Hackathon etkinliklerinde takımlar halinde veya bireysel
@@ -230,7 +232,7 @@
                 >
               </td>
               <td>
-                <img src="icon6.png" alt="icon6" />
+                <img src="images/icon6.png" alt="icon6" />
                 <h2>Hiring Challenge</h2>
                 <p>
                   Hiring Challenge yarışmalarında Android, iOS, algoritma veya
@@ -289,7 +291,7 @@
               <th>SENİN İÇİN</th>
               <th>VERİ POLİTİKAMIZ</th>
               <th>
-                <a href="#"><img src="logo.png" alt="techcareer.net logo" /></a>
+                <a href="#"><img src="images/logo.png" alt="techcareer.net logo" /></a>
               </th>
             </tr>
           </thead>
@@ -386,14 +388,14 @@
                 >
               </td>
               <td>
-                <a href="#"><img src="xlogo.png" alt="xlogo" /></a>
-                <a href="#"><img src="ilogo.png" alt="ilogo" /></a>
+                <a href="#"><img src="images/xlogo.png" alt="xlogo" /></a>
+                <a href="#"><img src="images/ilogo.png" alt="ilogo" /></a>
                 <a href="#"
-                  ><img src="linkedinlogo.png" alt="linkedinlogo"
+                  ><img src="images/linkedinlogo.png" alt="linkedinlogo"
                 /></a>
-                <a href="#"><img src="youtubelogo.png" alt="youtubelogo" /></a>
+                <a href="#"><img src="images/youtubelogo.png" alt="youtubelogo" /></a>
                 <a href="#"
-                  ><img src="facebooklogo.png" alt="facebooklogo"
+                  ><img src="images/facebooklogo.png" alt="facebooklogo"
                 /></a>
               </td>
             </tr>
