--- a/HTML/index.html
+++ b/HTML/index.html
@@ -173,26 +173,23 @@
           <table cellpadding="18">
             <tr>
               <td>
-                <p>
+                <blockquote>
                   Öncelikle bu tarz bir yarışmaya katılmak kariyerim açısından
-                  <br />
                   bana faydalı oldu. Her açıdan keyifli geçen bir süreçti ve
-                  <br />
                   benim açımdan güzel bitmesi ayrıca bir motivasyon sağladı.
-                  <br />Böyle bir iş fırsatı yakaladığım için çok mutluyum ve
-                  <br />
-                  bu fırsatı yakalamama vesile olduğunuz için teşekkür ederim.
-                </p>
+                  Böyle bir iş fırsatı yakaladığım için çok mutluyum ve bu
+                  fırsatı yakalamama vesile olduğunuz için teşekkür ederim.
+                </blockquote>
               </td>
               <td>
-                QA alanında kendimi geliştirmek istediğim bir dönemde
-                Techcareer.net ile tanıştım. <br />
-                Bootcamp başından sonuna öğretici ve bir o kadar da keyifli bir
-                süreçti. <br />
-                Dönüp ardıma baktığımda gerçekten büyük yol katettiğimi
-                görüyorum. <br />
-                Techcareer.net ailesine desteklerinden dolayı ve <br />
-                bize sağladığı samimi ortam için çok teşekkür ederim.
+                <blockquote>
+                  QA alanında kendimi geliştirmek istediğim bir dönemde
+                  Techcareer.net ile tanıştım. Bootcamp başından sonuna öğretici
+                  ve bir o kadar da keyifli bir süreçti. Dönüp ardıma baktığımda
+                  gerçekten büyük yol katettiğimi görüyorum. Techcareer.net
+                  ailesine desteklerinden dolayı ve bize sağladığı samimi ortam
+                  için çok teşekkür ederim.
+                </blockquote>
               </td>
             </tr>
           </table>
@@ -291,7 +288,9 @@
               <th>SENİN İÇİN</th>
               <th>VERİ POLİTİKAMIZ</th>
               <th>
-                <a href="#"><img src="images/logo.png" alt="techcareer.net logo" /></a>
+                <a href="#"
+                  ><img src="images/logo.png" alt="techcareer.net logo"
+                /></a>
               </th>
             </tr>
           </thead>
@@ -393,7 +392,9 @@
                 <a href="#"
                   ><img src="images/linkedinlogo.png" alt="linkedinlogo"
                 /></a>
-                <a href="#"><img src="images/youtubelogo.png" alt="youtubelogo" /></a>
+                <a href="#"
+                  ><img src="images/youtubelogo.png" alt="youtubelogo"
+                /></a>
                 <a href="#"
                   ><img src="images/facebooklogo.png" alt="facebooklogo"
                 /></a>
