--- a/HTML/index.html
+++ b/HTML/index.html
@@ -387,17 +387,11 @@
                 >
               </td>
               <td>
-                <a href="#"><img src="images/xlogo.png" alt="xlogo" /></a>
-                <a href="#"><img src="images/ilogo.png" alt="ilogo" /></a>
-                <a href="#"
-                  ><img src="images/linkedinlogo.png" alt="linkedinlogo"
-                /></a>
-                <a href="#"
-                  ><img src="images/youtubelogo.png" alt="youtubelogo"
-                /></a>
-                <a href="#"
-                  ><img src="images/facebooklogo.png" alt="facebooklogo"
-                /></a>
+                <a href="#"><img src="images/xlogo.png" alt="xlogo" /></a>&emsp;
+                <a href="#"><img src="images/ilogo.png" alt="ilogo" /></a>&emsp;
+                <a href="#"><img src="images/linkedinlogo.png" alt="linkedinlogo"/></a>&emsp;
+                <a href="#"><img src="images/youtubelogo.png" alt="youtubelogo"/></a>&emsp;
+                <a href="#"><img src="images/facebooklogo.png" alt="facebooklogo"/></a>
               </td>
             </tr>
             <tr>
@@ -438,8 +432,8 @@
       </table>
       <br />
       <p>
-        <img src="iskurlogo.png" alt="" />Kariyer.net Elektronik Yayıncılık ve
-        İletişim Hizmetleri A.Ş. Özel İstihdam Bürosu Olarak
+        <img src="images/iskurlogo.png" alt="" />Kariyer.net Elektronik
+        Yayıncılık ve İletişim Hizmetleri A.Ş. Özel İstihdam Bürosu Olarak
         31/08/2021-30/08/2024 tarihleri arasında faaliyette bulunmak üzere,
         Türkiye İş Kurumu tarafından 17/08/2021 tarih ve 9317662 sayılı karar
         uyarınca 170 nolu belge ile faaliyet göstermektedir. 4904 sayılı kanun
