--- a/HTML/index.html
+++ b/HTML/index.html
@@ -432,7 +432,7 @@
       </table>
       <br />
       <p>
-        <img src="images/iskurlogo.png" alt="" />Kariyer.net Elektronik
+        <img src="images/iskurlogo.png" alt="iskurlogo" />Kariyer.net Elektronik
         Yayıncılık ve İletişim Hizmetleri A.Ş. Özel İstihdam Bürosu Olarak
         31/08/2021-30/08/2024 tarihleri arasında faaliyette bulunmak üzere,
         Türkiye İş Kurumu tarafından 17/08/2021 tarih ve 9317662 sayılı karar
